<resources>
    <string name="app_name">EasyLiving</string>
    <string name="update_bill">Update Bill</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="add_bill">Add Bill</string>
    <string name="clear_bill">Clear Bill</string>
    <string name="bill_name">Name</string>
    <string name="due_date">Due Date</string>
    <string name="bill_amount">Amount</string>
    <string name="bill_frequency">Frequency</string>
    <string name="bill_company">Company</string>
    <string name="edit_item">Edit Item</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_item">Add Item</string>
    <string name="days_left">Days Left</string>
    <string name="bill_history">Bill History</string>
    <string name="paid_day">Paid Day</string>
    <string name="todo">Todo</string>
    <string name="medicine">Medicine</string>
    <string name="cart">Cart</string>
    <string name="bill">Bill</string>
    <string name="under_construction">Under Construction!</string>

    <string name="category">Category</string>
    <string name="cartItemName">Name</string>
    <string name="createdDate">Date</string>
    <string name="createdNewDate">Create Date</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="grocery">Grocery</string>
    <string name="daysPassed">Days Passed</string>
    <string name="cart_history">Cart History</string>
    <string name="update_cart">Update Item</string>
    <string name="clear_cart">Clear Item</string>
    <string name="delete_cart_item">Delete Item</string>
    <string name="add_cart_item">Add Item</string>

    <string name="todo_Task">Task</string>
    <string name="todo_where">Where</string>
    <string name="todo_time">Time</string>
    <string name="todo_date">Date</string>
    <string name="todo_update">Update Task</string>
    <string name="todo_clear">Clear Task</string>
    <string name="todo_delete">Delete Task</string>
    <string name="todo_add_task">Add Task</string>
    <string name="todo_complete">Complete Task</string>
    <string name="todo_edit_item">Edit Task</string>
    <string name="todo_add_item">Add Task</string>
    <string name="todo_history">Todo History</string>
    <string name="todo_time_complete">Complete</string>

    <string name="medicine_purpose">Purpose</string>
    <string name="medicine_instructions">Instructions</string>
    <string name="medicine_add_item">Add Medicine</string>
    <string name="medicine_edit_item">Edit Medicine</string>
    <string name="medicine_complete_item">Complete Task</string>
    <string name="medicine_name">Name</string>
    <string name="medicine_update">Update</string>
    <string name="medicine_clear">Clear</string>
    <string name="medicine_add">Add</string>
    <string name="medicine_delete">Delete</string>



</resources>