<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cartTableBackground">

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/category"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/cartItemName"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.25"
            android:padding = "5dp"
            android:text = "@string/createdDate"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/quantity"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "0.75"
            android:padding = "5dp"
            android:text = "@string/price"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/grocery"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:textSize="10sp"
            android:text = "@string/days_left"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp">

        <ListView
            android:id="@+id/cart_items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:background="@color/cartTableBackground"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buy_button"
            android:theme="@style/CartButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="BuyCartItems"
            android:text="@string/pay_now" />

        <Button
            android:id="@+id/cart_edit_button"
            android:theme="@style/CartButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="EditCart"
            android:text="@string/edit_item" />

        <Button
            android:id="@+id/cart_add_button"
            android:theme="@style/CartButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="AddCart"
            android:text="@string/add_item" />
    </LinearLayout>

</RelativeLayout>