<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/todoTableBackground">

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/todo_Task"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/todo_where"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/todo_time"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp">

        <ListView
            android:id="@+id/todo_items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:background="@color/todoTableBackground"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/todo_complete_button"
            android:theme="@style/TodoButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="CompleteTodo"
            android:text="@string/todo_complete"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/todo_edit_button"
            android:theme="@style/TodoButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="EditTodo"
            android:text="@string/todo_edit_item"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/todo_add_button"
            android:theme="@style/TodoButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="AddTodo"
            android:text="@string/todo_add_item"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>