<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/medicine_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryMedicine">

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/bill_name"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/medicine_purpose"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:padding = "5dp"
            android:text = "@string/medicine_instructions"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp">

        <ListView
            android:id="@+id/medicine_items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/medicine_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:background = "@color/colorPrimaryMedicine"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/medicine_complete_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="CompleteMedicine"
            android:text="@string/medicine_complete_item" />

        <Button
            android:id="@+id/medicine_edit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="EditMedicine"
            android:text="@string/medicine_edit_item" />

        <Button
            android:id="@+id/medicine_add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="AddMedicine"
            android:text="@string/medicine_add_item" />
    </LinearLayout>

</RelativeLayout>