<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:id="@+id/title_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tableBackground">

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/bill_name"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/bill_amount"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/bill_company"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:padding = "5dp"
            android:text = "@string/paid_day"
            android:background = "@drawable/cell_shape"
            android:textColor = "#ffffff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/history_list"
            android:textAlignment="center">

        </ListView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="?attr/homeAsUpIndicator" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>